--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react-dom": "18.2.0",
     "sass": "^1.64.1",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
